[package]
name = "world-renderer"
version = "0.1.0"
edition = "2021"
authors = ["Artur Wyszyński <artur.wyszynski@wildpixelgames.com>"]
license = "MIT OR Apache-2.0"
exclude = [".github/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
bevy_egui = "0.15"
bevy-inspector-egui = { version = "0.12" }
#bevy_atmosphere = "0.3.1"
rand = "0.8"
noise = "0.7"
geotiff = "0.0.2"
gdal = {version = "0.11.0", features = ["bindgen"]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "debuginfo"
lto = "thin"
